add plex deployment to kustomization

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:7ssgRI163bsEbGAKWrKtq37ERMfddMfbVhY+c38oU2uM9jn7n1jXtQMBHa+aIgszPB4Qy/uhdNFS+KzqO3OsNMs=,iv:55sglSZqODN4AgCj0sLRqzL0SU/Nbqb4QfcZ8KQLJDA=,tag:YIxLTCOOwaujZ+olb8P8Rw==,type:comment]
-#ENC[AES256_GCM,data:+KYtldfqs89C/41xkaMj6CXK1v6p9bOfh4/xjJsqH0vl7RzMwZ0PkeJkG3A=,iv:4EzVDaWLj74ZZgeAu37LhVdLhPdolheK9/pehGnc10w=,tag:HopdAHBjbtIo7Qsu8KiJ9w==,type:comment]
-VIP: ENC[AES256_GCM,data:+KFrD/JtTO8e5DkZfA==,iv:/vr4ZNBL5jZRrQAhxze91UHgEmIhb/XGF2o/70SK6mE=,tag:nYtjyF1wn5yJ+DEuISYSCw==,type:str]
-#ENC[AES256_GCM,data:1mTwRLUe7KXhJLMv6J9sV0/knV+BhrXpkqUG,iv:qoBZoO6aisIRh9bb07ZcoGGOYS9IBMS0bOK2pILEycY=,tag:w1T9aj+yo+exboIy8Pj6AQ==,type:comment]
-#ENC[AES256_GCM,data:RY+3jmbcztsgn2IvCPEYPki1BJm6e9BjfF1TjQv/dqNATwiSnV55iQIw08GzokvK3C50NLuBlE6uNVdh212+thlOE2+sbIL8F8dEF/rDqFUL6zo//1dVShw=,iv:+IldR1CLtWk0aXJ61Xvy9TADHPvIRlRZ9KEQRlGH/RU=,tag:f6LsYbSRPvOUrHPtE66uTg==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:S5pz76dKVdjSszYzf9g=,iv:kpAD/6poeGrXjIgPKs/e6Qdqrfg0HUc9g1DWfaMULUE=,tag:KQjh3EkZGTMtx+ZprxLXWw==,type:str]
-#ENC[AES256_GCM,data:B4h2pcvlzUNZ8ooa+ZwsMnCDhO5Z/DRSLU6h3dv92+en2A==,iv:wdf1hBLi1GDoFXgfvDjoEdSkruNzofF1bJW+WngUxWw=,tag:IoGJYCpUL0rfFrPFRUB36w==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:F6J38tAiHlpa32H8Fw==,iv:DOMSifFYeAMCGSZy6lswOupHsIbX/SZeO1JGmMgyXdo=,tag:zHOtDsP1EZAwtyMOVYZNJA==,type:str]
-#ENC[AES256_GCM,data:ZmLF7qSHaL6Y3Az7ozWbQKUypvGZ+D0Mtr1GjMFYojBrPmXJg6m2znFOw3NgQzg=,iv:hlKtokSJ9eTG4A+0Pq9huymhAIM/qoiIN3s9B9cmswA=,tag:nAi/mwrgOm5BRlw4POOntQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:uBnt6Dp6q5vjM5q9XnsK1AWtozBwxrkCqn9tgX2PLA==,iv:5S96myZp4AOjR3aRY4DB1nZIrUSrxyHTkdtMNN74SiY=,tag:SMU1kTOp1xJ+VZ9KNlP5fw==,type:str]
-#ENC[AES256_GCM,data:vZqs6JR5g9vKVvdTWy686ZMN/WPh0wIYxbC8sQhqH2XGWU7wes3TkzghJSRt5am7g0r+Wq0aVrgaXy20SYD16ctZJ1yYg3AOhj6aCYKVD62UXg==,iv:dJ+BvceqcRXwfXrL/IXAJjQW1K6ns3XlogtfJtpE3JQ=,tag:czWipirE/t6G3SttxVd5HA==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:ygKfaeQlck8Zsso4smYg,iv:e1tLgSD0nyniknHnC3D3cWIIzN8OXod5n2sYnJR7rvw=,tag:xs0aq7UhkAPROdSGXrGIkA==,type:str]
-#ENC[AES256_GCM,data:f39ydw44JYXxYGqYo+9bCyyihhsqCbYaztHYBSuVrjiG,iv:twEICkvCZ3sAPUtpmOFIxkvlwn7PJHe2TynykV0Oa+Q=,tag:1EC/iNyv3I/JqrwMFxWOWw==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:9ed5BbtEX8g1Szcv8gpf,iv:kKWIAttLh/eVv39ilMsf3/guu31Cz4VFMTV5nsW1zfM=,tag:smSUhYL26FtlNQLXgu4wHA==,type:str]
-#ENC[AES256_GCM,data:gSV/Dy/IdadZ85XK78urs3ISwZusjKEkZTQIOp+kK2iPuu0yAQH7e+qviFbgT5WiMRh/Rc2zv5dn2PmJvOCEREQy3+RIo+CMG+jFc3WsB+M=,iv:ZRJY8b9sSnyDOhGPdubOjP6cxxFUZQq8i679TX9V/l8=,tag:0wAOAyy4RfVRipSopvKAJQ==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:vSJWDmyly7fwKLAZDwJo,iv:1Vl+/hQcc+tKOJmGaG1BYGGUgi5aUmrdBiGEK91476E=,tag:QaXxYh5CjL66m7DfWs4MJQ==,type:str]
-#ENC[AES256_GCM,data:OyHmoyjaF0faVR787+jphZwDydrOZgYc9BE7to7rGQqz2KflQAIHeN+6ZuIpMIM/U2B/Cl0hRWfCQELLD2Lr9KieT/DPtdXZqR+i8iC1/tJzKr8JYswq,iv:CU3y0VEVXO5K63xVzDeTxmVJWPwv77i178oRoI6B30c=,tag:TugfVmNxGnxzGxuFPEu2tA==,type:comment]
-#ENC[AES256_GCM,data:4zOMW1ZDXksSlVHGrJ3Aot42xCS+wfLnuYUjWKhhCteTLS1vf4Ij90zSqX2Wq0HwjMk/Z1m9N+0uvsRNy9VcfUjslzo4wnl7hH2e54tarhNgeAP99kb8kPeK3W2TCQIKecJgtqduipKj6dL5M5WGrF4uTpODJaiW4lpQ6w==,iv:+LQ6h6y0uAw0aKNiLbbwbC1vt9F9Oh2/GSUcL6PJOY0=,tag:nPkm2cL4tm2KnzWFlq567Q==,type:comment]
-#ENC[AES256_GCM,data:9DZcxqOJ3iYkyCw1U5CcyPrIDhsqhFVESeBtSZVo/bqWQ+7IvG91Zb9P6G0A9AySXlxvaFNOrmTmZQsBqVjXNG8zb+iw7BZD10BaB4DXJoY=,iv:DdR+1Tb0Xy6Y4ZIIkAQTkmGFxoast6DnZCZ8a8dAY+I=,tag:FC7uj6VmWOtIkWOLkEhL3w==,type:comment]
-#ENC[AES256_GCM,data:iTR6ulMbjNwbC7XTpaoA1IaOa3c+Gi6BUkkdJZxXBf1+d3m0uHNsJh37vnvqrg6DNKFOlhqv,iv:+0hzp0CbyJ6JdGVquiUdOYSJO10gJXrLE6R6q6nWapU=,tag:72EA/BVUlYM2w6G9+095cw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:FfqqXDr9A8fSg1JI,iv:9+uqdbCt95pqSBa5/UaTFkxPrnWYGk7wj3mRaNRWAKY=,tag:IXu449xn2gGrsL1I2LSPQw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:/Jx0TU06nUNssAj2oMZRW4E=,iv:X0NyfDLg9EP4MdQ46ACE3GMcMGqKM2q8fJH4bQ1B/TU=,tag:b2KWQPzsZvDux4dWAViNEw==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:2UWxVHhqNvXVVxg0zw90DYFxjE/wQcpQVmDp/C2c4tw=,iv:ik+AvCzG3umkdQ25j7eWkKZOu0yOVQlWcwH1Lzek/kg=,tag:dG1kdRcIYJBec2k2tfKxNw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:9+ikMhOF0ui3hIyBKjay+0w56uRMRld/mQxRk3qNdaBP3KWRVavUsg==,iv:wzarzHZ03Me9r/KaCHYbhJuLAO4Vxm+VkPy3U46c9+A=,tag:jh5RAaGPo5teLklGHdiMYQ==,type:str]
-#ENC[AES256_GCM,data:XRMHPqXrTLICFMnSrlOPyIQUH1VW83IQ56qvIESxXSBY8P3cFaZuVm6S6tpkTAslo7q7k5N74H64GZRbvxniSQ==,iv:KuUrIFLtoU1olVRC4PEMRxhc6Xa/spsXmadpY8MQ4MA=,tag:fsmYdq0hY6OkpBsrwsPp4w==,type:comment]
-#ENC[AES256_GCM,data:n83DMzeTbDX70EHEzo9W2vZlcAznhnEfGL9LIc4/MJFkCtzZEWMtcccSIxqhnBk/xg9o+oiHysA=,iv:dPcdQLGCUHyWvhbYz1NXnkG18jhum1+lvpYg/llmodc=,tag:mMwxteDkW73ZzYQ7PFx+9w==,type:comment]
-#ENC[AES256_GCM,data:o0TyvME8E0RxuC7/A9EyvgoDcrb/uCmmmA==,iv:phizgpvqV0FxWn/riNriyxZ1wrmxqgU2FlYWr7YyTqM=,tag:u9dXhNiSqdJPnXbNmvnUkQ==,type:comment]
-#ENC[AES256_GCM,data:BNgDoihCrjmF2dbuEB28R7Fa0T3PI6CT9TtbfMNICKlzEqVlUfi6iP75idCFlgXi08fwnx76h4ESE6i8qfKB0wq0iSwFC9r3cRKYUwo=,iv:uwin1f14cytbViRgTqL1UZQzAu6Nkh8Tuu3gBJ5h7Ww=,tag:3JAnxXIQP1LGoWIy42OycA==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:vp7YpTRaPr3vTvIsWvK7W40jNakII/R4ogwlyugC5izkhHXc2wI1MHWXpVpX4ZdT,iv:DaOhrv9H8ft+WMlWDvwX0Ud1Z5UPOEDR3cDcXQLM6ck=,tag:WnG0HjugSFSUX2Hjr3vwKQ==,type:str]
-#ENC[AES256_GCM,data:3gxZnIElJ6A+Tr0mS7VmaA9aGzkXVazVgFi0IbzXB5NvMTfvJ130TXpb6dHxlIvgP0n5VtAa8q44kZsBndLdBVNODbZxJzI=,iv:AZLYEtOYtTkjI9L+tgXl3smbSoQ+LswQo1G77iQvXYU=,tag:pm0uDU7U2+WDWy2vLhXlFQ==,type:comment]
-#ENC[AES256_GCM,data:tjzZh0uNrZ5GoJb3NYgeTpSqsNMPz0RGxE3SxQQkTYqzqnVbDGEWf0QKZbPmO998Bqma1t8p,iv:PVCN1zI5Suwg1Sdg5t8UwWAWD5v1/17QYglz2fewRoI=,tag:BGDBBbCAWNmJH1hH11uPng==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:AWbP8MtwxQ==,iv:wO13QgiEZ5qL/4jMd/VsJUxdJaM2uSv74zhG07lNxOM=,tag:FfWcBql+VC/ymCQiljkbYw==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:wNf/LpNe8/01q0wbxX2joXhIvc0=,iv:fmmh9vcglrT0Qz55KvhvqKSU4LcS8pwzPcKSujGcB3Y=,tag:RhrztoovKq0PxgU8npORLg==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:XJo8nEwW2iqw7Zk=,iv:lYJB7VCvU7ZiOwaHvlnniQQAgYXPCMAAaqNI30VLuI0=,tag:Se7wgjqwKxTe4CP42EoMHQ==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:2DL0TOpCWtG5j1FOqd9l,iv:yXTQJxFpx0MW2vMyfPhiLtzFnH2sA7qSC5kiKp0XTDQ=,tag:rrjBMBLxlYBmChaj0OuVOw==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:32Y6/HDeUCIMlDi+L6yt5qsrQ3bdMPsadg==,iv:LhyE/o2iMlgyINibqPf21x+Bq/MRWWsc3M4L9L4gYU0=,tag:Yi6VKrKV9J249Arfkkq/iA==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:Kx26I8sjz8I5GsaKIzFT6MrNNdi/iHde9xTTnjzEjw==,iv:SmZZybymTP6+mGMbPKEdNMLl0IPxCInc+y4xPYN3hzY=,tag:j/iMvWCXU/8qXaFxA9vUzw==,type:str]
-#ENC[AES256_GCM,data:oJJsegIL+mHicck9xhFrbmPuYDZX9QUWKGt5nneKfysw65clajA=,iv:NyRVFKfRJU4+ZCEXofOfHRwRRhfeh60RM6P6qGDyHjg=,tag:vgGfuflvsazXEUm1sdqOrA==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:Ty9VJ55O+B2tGAOCEHPKPejvPs4=,iv:iXvb+pQDSvyo5lVbdZEeEDtLAR+s9nE2z02/wefrVps=,tag:GL1eHbvdaQlTp09mMFT6tA==,type:str]
-#ENC[AES256_GCM,data:PMoIWy2Tgce/GIAXhzA=,iv:edUQdod5hJG/ZqvnAo1SdPTfBtyDWqlE4IBPety7mlQ=,tag:UefXmHZ00dflqdMC7kux1Q==,type:comment]
-PODNET: ENC[AES256_GCM,data:vq5WCVPT5gT3TD3MRw==,iv:4Sbm+NU7M4zdoFfFXETom1kOx/V9hPvMre20BeK62Q4=,tag:EonmFfecXJ/zegDjPofQgg==,type:str]
-SVCNET: ENC[AES256_GCM,data:TvcKbNPPSFi93id7HA==,iv:xXKR4NDCm3zfyMInWIRHjMtUdKuxFR2T7pf9ZYKY5Jg=,tag:/rQYnPPYbeqbb7hd6KQjDA==,type:str]
+#ENC[AES256_GCM,data:9q5gYoPF0D+3EL4QFm6hoZ9ieV1dk3Kj7oV8iO36kWm8HRABrbL83fS9HWcGSjjUvjp7dorzAsT7RNaJw4eJqzg=,iv:3W+K3xXOiD0Zt/4rKoWYuEgaMS/gVLcOwfw9zMaaJ+Y=,tag:atrlovzOXR+Wn6C0sTHHgw==,type:comment]
+#ENC[AES256_GCM,data:3np0f3B6yWzGE3PKZ8losgzuyCHx6aRQrbu5k2mEL2cWXOrhxxeS2Tk4q0A=,iv:jAlvS9v6MyebPIE25kM1HgsBpz7hH5ayp6vM6XK0cZU=,tag:3K8ShOYUbuUQ4v8PbqK7lw==,type:comment]
+VIP: ENC[AES256_GCM,data:AYBKbFKYLYDLl/jKkw==,iv:PAIXZ0AmSRD8NsRreyvzyNXeKITZsHfccmSjmRerrbk=,tag:8icbFWgXUA+YxXHMeAh6fg==,type:str]
+#ENC[AES256_GCM,data:qXR6JZBoDPXj5kwB3o2co74EhAyNJ21cbkxB,iv:Na33+UpL2Z1VsmHC0YiMywUMYuS9EFg325qgPGDe/4o=,tag:ENAvIIzmfDWYVaJciJ1sTA==,type:comment]
+#ENC[AES256_GCM,data:EY/94PF6/r6TaXS+7WfdJ3i9VZA/cDWn1J+JmHTJW/AsEXBizGGWMeHpreEF4gJzsVFPFpJk1oMeUm+8BZYu5Fzgo8k4IQn583kAH6GwzuCtMUwuww0oNow=,iv:XbfDULAHQ3ikYWvqi0rx0lr8OEnLE/Z3HtDjLPKi7ek=,tag:3hdaVJaCnrWRAIF+ZnBt7A==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:DKIMcHOTYy7/kdDKG7c=,iv:VXtP5+jnhd2HNx0qVWhvZ6t0+ZywkNDUA8hHtvYpoBQ=,tag:Qoa9gcXD5ugK9PTeAgtMKA==,type:str]
+#ENC[AES256_GCM,data:zwsKx5XGPaESSHoT8r4GmQZtoBxUeytT5lfOKCYDrAk0Nw==,iv:D0F9m2T8VI+ipsDYKUwZP573UbToFwvKIf+nqIrmsi4=,tag:CXV3GwLwal7ic1IPqmfhTw==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:47upbz6JFDcHT2vW4Q==,iv:zct/anTP7UB98XZaLtnsSsrHJTL9mHES5aBJ0ln/t+g=,tag:UPQo7zIwu1fgnHBxHt5zwg==,type:str]
+#ENC[AES256_GCM,data:oAWbMUDzxPwG0++HlImQ8wSFSrqQx1MWa5or9ZNorIXVIpXmNvOliccAUam8BBc=,iv:M70fwZiv6sPxd0x2l+174Gtd0FPVG7xkYht3fV02mO0=,tag:5Qkj9LrpNxz0p+X/AJgegg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:FcMBj0ZuSa402zxAXfIWf42Z1MzXDVvh8Q+xu2LxYw==,iv:54NVStaker7HF8l86X56HwnzKsXiJHTz0wO1b29fWxw=,tag:D2rVMKGykWJoDyUGD2N4zQ==,type:str]
+#ENC[AES256_GCM,data:vYNbSXP3d/KmoEW+hSB5nFxgflJHS3PMLYxj7F957KJE7RcWwKeyyoMzdYKxk02x69/UT+9I3Ljw9PRUClkMDwd2fLOcLV2lZuu+4o2CXlQD5Q==,iv:Gk6BTfFgf0fGViMc/hoe6l0H/aYO2VoYcUD488Gwzog=,tag:VxhpAr7L6UdtfZFFx5W3KA==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:LeIiF4v2mVQ8DtQMpCSG,iv:P9WY2XxYEULSeinI8UtWfl3tdfkru5Oo1ZIMuZSpHfU=,tag:t/eu/Z1bLPBgsQwoRDYOLA==,type:str]
+#ENC[AES256_GCM,data:DDDq5ArPaJk7rpthHO0UfCB8P50Tqz3l9aM4B0vnnPUR,iv:vDkjYSCwYaEWDq4cUadDkL3JDZZaOy8qMYmOG5vOq/I=,tag:mvTeXu+xi2mGrtL1O6iMyw==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:G5bE1PapxJxjCWKituoL,iv:kdNXz/W0HhNzezwULXK7ZwTUfyf1NOwoWGInbdSsPzE=,tag:eeyilbre3eAzmQvggFAKyQ==,type:str]
+#ENC[AES256_GCM,data:OeNcRh/HEAz8lD2CUOuJ7iIQTic50WtamoKsjQXiWrhhFhQ7BeB1orOYmJbtGcRrT+W4NymoglhxKBICK6sIFCyS1KhU0IFNl2WkrDE2wNU=,iv:nn2+5X76dcWWyxljbOD0AdCP4jnjVWDH48aHG44L21w=,tag:H1Su+Rsks0W91SkIZqoajw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:t6YaYnE7dFEQyM9OnK0D,iv:w6dwceVMcaPnsKhcDFU8sAo1JiBkBD2gBbSxRuCX1Hs=,tag:Cng7+ZoYgeS81N91iEh6cw==,type:str]
+#ENC[AES256_GCM,data:uqlNlahkoDStV09/t+0xr3AuB4V+BonKbb1nNfBdtaMuicqM/6Y7tTwkJeTxVj+SMfzofQtHnebwpuVEWOYD5Peswo7JHr0EKINvL9Woxv6ADDbMFAw7,iv:mtdWetzIt+VaqFJyvKKmjIuD95aa/T3O/bK+8t8BXSE=,tag:SeILotWw990kKlmnkXpwiw==,type:comment]
+#ENC[AES256_GCM,data:x8KWui1qHr3GFiPGpSzuik1rNRtYlW14YIC9PvgUtEqhQ0yOyptVB4iDTNb9mjqsSY5TxmqqAvMG2qK7ZDg9hUbse5ZaV7xgM7/M1guc0VTpdvnqwjd0yRFdVxgaQ2ost8UNDW2JEVxCAnwANWRqBpnLpLvf4duXcbUHdw==,iv:trOtmI5LXSelukby0xDUxfTIuF6iyZG5PYq4638CS1U=,tag:dNoN9GQRhj8lbYP3FDtZ+Q==,type:comment]
+#ENC[AES256_GCM,data:VNqBew2TKveIEVGkopDNY5gSdCsqijlGhiBWN1jY69BC/PiS+fXPuf85FGf4QzJtojq9UTQ0oly4v3IcrheW0QAdD7FPNo61v/ZD6S+V8/8=,iv:glksSbxF0r4Rjb05AMzu7XNab1CO4n8IXYMKYUoMCyA=,tag:2x4BsXdc0E47tSgW6UHkjg==,type:comment]
+#ENC[AES256_GCM,data:GeLANw7thj11VLD5j/8eSZYbUyghaz4etJ+QTTHhg9EHhSr5JJxPDx5auyBFPF3fENpvLWW+,iv:+pFFd/DPUk//7zWd8NTJKqzDTGX1js5kmKerl9G50xA=,tag:/lUS6QK8glUkepjQrEmVRg==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:eHvNHGu5XFQIdTBO,iv:F2pS6pkZu+JlAoJWf4T2+VR0rzefANVpBjR1i/3z7uc=,tag:2uyEn+jKepOtz9fW6QEhlQ==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:rT3Em6EvNMS7q9mHMC5+Hzg=,iv:zsG2A/CLGNux+rKMRa/yXLZzIIJz3Rnf+NOmr9X/7nE=,tag:JCN2ln82USMT4WelN3AA2A==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:Yq3Uj9p9uvC9f0JSOgDKwsSOP/8iKblubRpVFhMeiQk=,iv:WOmhW7yDVZQ8X1isdrpga4u4TPumT5kAtpVhrHdfWpQ=,tag:RcXrhD8N1Qw7X4C/AnqkBg==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:CZTYXPEvCwUh7CX4f6gE6J9fGq1D5Ue8qskd5a4jaZs3NeOBWHXEfA==,iv:msdmzrFZxhciO9mBVE4ZHeL1zpbKVV0wqrVh73f6Ujo=,tag:KEr8ImT/QBl+eikJnvENag==,type:str]
+#ENC[AES256_GCM,data:qYOgaFz9ftoDSRGsD9EKFreDQMpPybpIMFPeTPwDA+lw3UGXhZycgeSBlOraQFwQO8SykkeRoFn97IOAyZJbhw==,iv:kG48PmGgPKfPHbvXDLvIfJAvyQbAXkDiooCZbljf2JY=,tag:NI9Y56cKcTZMhvkSESqLGw==,type:comment]
+#ENC[AES256_GCM,data:F3WmXQjXcaGhHMmoyGTkHEtd2jRlM2jP9440uJlRqrqE7eMNVPpta9S/g5ceZ9qdJkDJvIoNIoQ=,iv:rLUcbz8Drg0HT/WGFKKctxztrKt29mK5JAvLXAnvUXU=,tag:QzY0PVZYRM258zsoKDxYbQ==,type:comment]
+#ENC[AES256_GCM,data:+SaqdrpcIorqrPUgklM8qTgr4IWEnTqZ8w==,iv:OOBrqUZmJSv8hINC1fE7QYnO3q1pgWfSbBj2QLBJDaQ=,tag:O3oVOoPgcbbdh4twrU3azg==,type:comment]
+#ENC[AES256_GCM,data:UJmzm9l64RlyjzznnlLOL20M5FH/X5bYVr8PNUfd4ITjFf4Nv1ONsiGOnUCMywEbCR67C8vsPwdgqhF+TRuaYQ8DtL/VLe2cg28owF4=,iv:4Q00sycn5Y6MCIU4h+zUxzdGrdxCzF8Kk1zDpBFWa7w=,tag:9M1uj3Lvex1G5xzKIoXknA==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:d2SZwI/aCny6U9b8LNC/5/7IsttWL/dYDQ5EStIbWggxQFvUeSuDUzopni0YENS5,iv:4rzjjYM0nSeoVsxYMR3dCYokjRrUvtNsYb75N7io0Hc=,tag:CiQYghKEzlZnY9RoDGS+Eg==,type:str]
+#ENC[AES256_GCM,data:by4LSQfohhJMuB7CZihB1xhXCxU0CxvfLobYEbrHssjTAqapZvTSC9Rs2/zl5bs/qGG1RNd59UBjNDn8ZXHE/rv2D2hQS4E=,iv:4vd18cm35uIpIoO+fJuHg5x3DpFhWrHZn98YIgz75Jc=,tag:StKG98D++Jwvute78nyyDA==,type:comment]
+#ENC[AES256_GCM,data:Xac62wyP/FZlyhwessiH1GWw/BGi5h+MSs2qVQb49jDHLPYQayQ//YaGflDcd4qN14WSDdFq,iv:8KmCGtXuTYZtiwyJdvKvdbfqgXHJ4Tg+Di4w9CBZJuA=,tag:KuIgcMCwDSIDaho0Nbc10w==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:3pq43+KK/A==,iv:DdGu1/9i9jKizFJk/Ik7M9w8Bd4riQz1OLYtEb96znY=,tag:kxoIoXOjDWjD7/UxR5MiQw==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Gakzm5cHa4UTYk4y0q1UqT/Bh4s=,iv:b7IBpmfrwpxx4HizjPtmdZaR1nxVi8QVNqA65CrtoaE=,tag:nyJlghX3rD8HdlAw1y1J4A==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:iUPQZCFKcX7ChDQ=,iv:vociJmj4w5H/IWDx5avfHxfk1vbi7qr+YKBmcSgcWmI=,tag:ExPpGOjYj4gbHyHqyz59rg==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:xa+K3kJ1zQl95WUy23Yo,iv:jh02zbE2W0LfvlbxyYWdtZRsMt1glxi96Wts9Gvz44Y=,tag:ID2ud9PyY1r+wHNQ2sJmTw==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:OH2N/acwL5ro+7R1bqLiGtcFKOjypZ5Btw==,iv:MPBvXWaitSrttynOr2EQqieYfNrYsCkK1BfMq66uV3c=,tag:/jwKgyl8mHUjm2qgLsgw2w==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:Vu5QdZEPnR01+E+MkFbEWVRLSxqAx/CrK6waTW58JQ==,iv:ivhFFHE1MiVPS0SGd9176d1wsPmIopOACPfk/vWIT4g=,tag:/QJVzUfFsrMX2h7U4zJxcw==,type:str]
+#ENC[AES256_GCM,data:jHiDBKqQmwMeX9yzI1tOKaUQtjHSbiiJnZ6sPBxfK7ihYET1N8o=,iv:2ilu/8+zgooO4nLP5XlI5PAoH7juAU4gMP6vnHziE0I=,tag:i/qhcsvuLhL0WVPYSyFKXg==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:T7yYct/p017qN3OfAHSK6MD0dkA=,iv:Tu0mzqQ43QN2+AMHVUJi9raSl58JXElG/wb2Lo7Y2rE=,tag:HK6Ct+h2i7UIcnZK2cwq9w==,type:str]
+#ENC[AES256_GCM,data:tc1plU3gPx/gNFhUTjg=,iv:g9MpR80tQFTF9rLzSEM2IBNmHXItgxwTC63kXVHQf+Q=,tag:Ao+gsyxmzK66CDChXJzieg==,type:comment]
+PODNET: ENC[AES256_GCM,data:a0pEJFs0ToYxA4YzLQ==,iv:+/vOQEBanEWOIAlxMOm+Fou2SZ+Vfd8Q+NNaDJKzhf0=,tag:7ZplGxE7u9tf+prC3OK7RA==,type:str]
+SVCNET: ENC[AES256_GCM,data:cA1XHRSyK3fUjnUvFQ==,iv:ErS6sdg1X6ea5LVyEU5NZLBVjQaBcVGs4gtXxwJRDhY=,tag:609Ql/gzMaOX21gvhO0AQw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVM01nUWE5SHF6WUxXNHBS
-            Q1RPN2tLTzhCTm1IWTcxd0JKUWd6ZkxWMldBCm5iZDczV1NLRG1mMHBlWWpxZ2FZ
-            M0F2MjgrOG05RHZ5V2RHbVVPS3hWbG8KLS0tIDRLSkEzYWgyVG45UEF5RzlBWkRj
-            UVBtWGNqdXNKZEh1Q2R1T1BIRFk5ZXMKnhcqOSgNeBaHdEHnsJF0gpRSn+Q9wQoP
-            HCoafsctp2djOht8sOWsgaNVAGU0f8VJvpSMp2yud4PJb5ehlZ4jyQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzbXllaE9xMHhHMklwVlJG
+            d1FFQ0daKy92MDBCdlVITW5aZTIwK21CVlEwCkdWb1JXL1dad1hMelpyQ0lBM0V4
+            TjNVNXZMalZQWVAvc3VLSDd5WEQyYjAKLS0tIElCMUZiV3VyNWp2Q2JzQmszTVBJ
+            eG1kUk5ucURKdU5kajdBTTB4ZDhaQWsKULFIQaSaDnslgpGD/STRvSR+Sn/l6aVv
+            nhBsRme52Rj+WNVX5A7uCl0abChkDS8cOnKhGaeP99gItyr6xvhgxQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-12T18:33:25Z"
-    mac: ENC[AES256_GCM,data:u/PbGk6ETI9PXshXGFEYLd1YD5KgSL2rqfNC4BS7+1EjAQzR39th+VqhdHnbDhzM/gMppzJim7IpSOdls53mgakUx4Gxb6aSJoW3/ERM4evb8fz7SqdBVEcMl8U/YD+NVe0PbhAWnOqs2bGLVr4bzf7tpCsyykz5w4QHQbTFw/0=,iv:TG2k6skXj4Z6g/Cef4ibEM+OITz7cndw6WPxTG7fLmw=,tag:soPITEHxHMHTAZFUITlTZA==,type:str]
+    lastmodified: "2025-01-12T20:40:57Z"
+    mac: ENC[AES256_GCM,data:mqrWWhaGfUFTrPeHnYNr68de4OvTbEJ0QL1QVPHzIgdiUzf+7gU9CLKU2NqYL6JxwKuutpUs9WYBnJ4j4361JK/NEOmiAYXIJire0Lpc7iZNRCaEfeMLQPzxFp70jehWLEa5ZV/PSL9NIzjMGsTBXEwpgHcRHUGMsUWX9oVriis=,iv:mwVfx4s/0BLyzysHWsDh22Thn+OOcQKx1Ee1/62t+SI=,tag:3XmT97iE8Knv2l8+SVey+w==,type:str]
     pgp: []
     version: 3.9.2
