--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:7+aHkwLH2nF5NNs8cCBzNPAMODEeA4Hg72afg4h1XAk/Jc5lV6SBg2aPFfMS5jqhthLEQBg8/0X3b1yVMvEi5HM=,iv:0ybvwGolyePA+zyI+VD0UBJ/AKRAlTFfPma7ypY6huE=,tag:BjC6tJuCjZandlegCPHJkw==,type:comment]
-    #ENC[AES256_GCM,data:W5Nn5Jp6QF70hlP5rJ2qHlyyD/2GEV8koRytFLU7hGb5PHlYVMg4bNnV5lI=,iv:EHuVbycREXT67TTkJXeN74b6Y1+/vKJ1t508eFDiamk=,tag:x3XHog9OD+OTNvtwbayxSQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:+UUCehGvmVpACU1yaw==,iv:CZApFvvTMQKB2mJlR+F6I/aUMUrZOjq3HSTtnKaWbXk=,tag:wHsI+sxmfcvm/UnHMJdJRA==,type:str]
-    #ENC[AES256_GCM,data:84BSb6N/7kg8XTIZvv5f6vvWa+jKS9JFdLem,iv:I0dFlXGJfXuRefSROYeoYdgknEvTNjSWZzJBuA1M67o=,tag:JZKfntsJrPtq098Mcw13GQ==,type:comment]
-    #ENC[AES256_GCM,data:JIh8P3gmvyq0dj0CTdGieV0rbe1yhIVv0Su1MZMBR+YPj3F7vK+/DHbFQ2SdsYDeZ9Wj1NhqOhnw9MtqxB99/O2CGA8GHqcT8OHq8N/Ddnkj46iNopxbEuQ=,iv:4Cx/aWU0LLwdTL7SyE4CYczDr1DXEcwhhqq89y7IF8Y=,tag:anReMzlCa+S+aLh9d+SAQg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:Nu+E9yZaoVyfdYFML+U=,iv:gBPXiwIhgrNt0PuWudhs6DtC5arb+b43doK7YgNwjAA=,tag:66355RvV9YvzSh1bPGNiSg==,type:str]
-    #ENC[AES256_GCM,data:p9Rj6bKQzzOZiP0znmq+XU4bTGY0phdSNWz6Og/HgILDbg==,iv:76oV/+aJ1FRljRAA7G9VofWhamTSVM1bn3J3GBVyxpI=,tag:KNdSr/UObFNeZWStxtQrpw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:8CZvba7nzcvk6CNc9w==,iv:d+Pyfr3drwTIqBPiNw0ar6eGw48RXLNc9ikZL29JMPc=,tag:7EGMsYKXzGs5I1dQosNl9A==,type:str]
-    #ENC[AES256_GCM,data:zVyY5XXRndzA7+FfYn6sypI/Dr5qgrnpGl3ea20RnxsGeNYBjQoNolRCP2jBsTc=,iv:E/ECQEdtipGB3GWtc/ir1eLa4RMnWVstur9r9BI3nLw=,tag:+nJ3RB4vxfMT7YGkRM36MA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:hWvuUJ4YFaM9nQy4PgOkfCdnwSckSztzffYtwupn5Q==,iv:FagofYGZMZ8NrS6oVMbus0kk03mDi3ywTbqhdlOJwqM=,tag:NcONTHsl/ki18lx9bDyA3w==,type:str]
-    #ENC[AES256_GCM,data:3bN/Ht5nMtkhy8ckitOPCkdteo5ElUsfCThFuKYDV09WEfDWx3+8NrYFTNG0JTJromP5bh/TEEYVDhl0Y+qvz3wuobPCDKSabQ+RYZWF3WfpCw==,iv:IPTVDqfkXA0l7JjsQGv5zD5hRfxOmcKP+o6P9GXlR5A=,tag:nJXgcBeJF5JVlZlRRyounQ==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:t5fF4H0gJUvPsa/rBEWZ,iv:NenR/eKOxzjvHvauZD89Ss8Zv1T1NAF2ccqRW3ihBGw=,tag:ETfzX6HVTm+3YN9w6zJSMw==,type:str]
-    #ENC[AES256_GCM,data:T0KcfsXeLemFzrqGBWekAOHLZV6ExL0kSH+8mH4vAFhQ,iv:xQXlDcm6kZYZLu+K/HuXiV8GzKdBAOGpxuaD7v81aZs=,tag:S4C4uJRaMYQYG8nLLo9d/Q==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:o4WRJLGEc87jWOi1tEE2,iv:GNoI+JlRdd90WujK/J/YLefOT8nyTX0Lwv8ZzxqvogU=,tag:XTcKALI2kh7BkgOeLsiS8A==,type:str]
-    #ENC[AES256_GCM,data:eaOBpAQZdITVWo9Lr5Jkma5iL8fdEP0cNT/bOL5EKcLCmkTww0BzvxMPT111utmSay8kOWI28ANZXkoCa8/rW8aJrgk/s71TbEOA2MRK9EU=,iv:lqtgzidC2f3uazJXRPs+3KRX6dgF0NDXV+fyYHMExxg=,tag:TbB7ACKCCk2aSkgD7kZ6ag==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:HiJUda80BknWtxFBOlDr,iv:+PTxAfq4zFVcVOWQfFK21z79TrRlaJYzrUPBcK0kLGY=,tag:6eS1S0zjMXTCeSAnBQlUsw==,type:str]
-    #ENC[AES256_GCM,data:HeeTCLUKg8dDVLJaF0zIxWBrPv8uVbOHUEd1RS7avaAqlcgp6RD4MKRN3COKBNPijxV+KssCZVP/Rl3W0lrCGNiCfv4l8iOkUL34QkT/0y07zfVTIHQP,iv:LpHts+9JtQbr4qBnEJJthpOQzvG11Qpde0Zs1VLjENk=,tag:xs0nKJIqBKSHpsIf8kX79A==,type:comment]
-    #ENC[AES256_GCM,data:sLOxuo/M1AclUhJPbM9wh72uMBaTuoulFtnnJ43PG/ZJr3GGNq2szwsxrWrS0e7fpHxHes/aAyrrzJ3fgZvSy5giJhKFDObJDI+cXfAJPR/Fsz+PvohqKaOW6mM3vp/BwOk70n3bK7BQDrDicW6B2dtMuOiNFP7zpCiWMQ==,iv:ixt5ZsGzBI2JySi5u/KOB8+9r4a1FgsEGp2YMnVkxeU=,tag:SpxPXAosplbZiqOY5FBKAg==,type:comment]
-    #ENC[AES256_GCM,data:oiQ1C6gj/1gwnMgwMCI62krJie0hFCtJeJ01vXNR/4D9i4uLaSig2dEKKblUAcNEKPew/plGTgE9ekwKHQQ7UNKDjYVQEEkiFIkQtsDvy0k=,iv:d5EphixdAXGNs2u7CLPs+DojFenchdxfRqm+Oq7lJFw=,tag:9lhObpC6AKDURXHuNxJKiw==,type:comment]
-    #ENC[AES256_GCM,data:yCI0/qf33y0Ubsi7ecRKVeZ6Yync0qxzf2ieRh/L+7mVZBqJbLByLUuD+Hj2eC3JPQ8Ga65X,iv:+z5FgvaQ8vScu1RnZHggz9WERI2YuitMV3/1hpLeD7U=,tag:IAHHyAlHRxNbaI1TQUCB9g==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:TDUvyQ5jU9opIhMk,iv:gfonwDL2h22LSGm7QWSkCl43oiymrP+Dv0J7ARps0sQ=,tag:+fG7CG5FbXNE/Zf4/IEZ3A==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:XkZBFgD/URwOabiYP+Ft5cU=,iv:7zTFLkjwXms+axq0sFZN/Pljq0oDCZtuXc7+wJ4rArI=,tag:JKdIlGblm8lfCUosQvWtxw==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:TTdmdqIv2Hb8hqGvm/A0PUIv0VY41/CgpX7gWAIadu4=,iv:GcZ3qWrQleXpyazY42h0SzyND5yGRMN8P2RhI/9CH2M=,tag:rh7+xx55wgr1OXV0PR73BA==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:ANCDtCJZXDgjoO40bH6BVfl5H/qnh5njAPT5q7MqfPIELUe6X8lJUQ==,iv:W4dQdOGkMuNPFHwfQ9M8msP/lZj2EECZfR/QX27L6M0=,tag:AD/GnKrhesxgUzPh+f95NA==,type:str]
-    #ENC[AES256_GCM,data:0mnwCBP96vCPfVMAPorQyWs+ZgwuhkuZeiBtZazUjADTBObwfXuFoQX9f4om8UGR1IP8jP2jOLrOAZ/0djT9Bw==,iv:Istg70ggQuAemfoNI2sGABgzj7Y8UqeF9YUfSMDxTNM=,tag:E1cKU4xx243bicv0IptkcQ==,type:comment]
-    #ENC[AES256_GCM,data:t0km7r9yThJvNUVgIS+uTDuWYRZ/VDkQjXY2QuxzY6rdVZwZBvNmZt7BVCP9eXeOsPFkv5HCZsU=,iv:bDpGpLOZ3ls97JB0N6PsJIj6mwRO3YfC1DKv/ekURU4=,tag:ZLcGzkqsAmh+SXb9D2SL2w==,type:comment]
-    #ENC[AES256_GCM,data:nO7vfd3RRddhLCZLfcuM5h7IgyeA1KYsHw==,iv:QL5gu471vgxonRejJC0116c0KETsndm0KhcrxJz3RPw=,tag:g8DEkmAwjiHxv8JAYK5gvw==,type:comment]
-    #ENC[AES256_GCM,data:mTQAu61zs2UE3OpY13yl8wzfsvZOkKP8in07/KSDNaQSdlVCGGD1nKb2t1gV7sdyvjfRsaciId/jzLHrmb1TNwG7mRJ8eKKeEUdY8wg=,iv:CpeBaSEVmZGZ494mDM8od1Q6x9ICwI/aCEfR+n6NeIA=,tag:hLq7580Jk8qVFeLyP/xooQ==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:CoiQMNXcFVuN2V54hpLQEglecUCWxD95jFVgTewm82STD9IHfbd+UDrtaQEnr2+2,iv:sn4Nq/AliAB2WkCHJHtm4m1VlwNFP2T+xPCbY4OgFUk=,tag:X9cHAOwiZnGb/Ej+SynaHA==,type:str]
-    #ENC[AES256_GCM,data:4wiVPJ5dpgE67gYlNv7pa8iPhKGvq95O4SzCGiUt+XucKvP4I5co7vwU+y+3ZRwgyYxNaqdjKY7lw1IYo/UPQEirWZh234I=,iv:9Hu0vpTD+A3fhWTJ1GKyNYdAQB/bhWh3zPs2AHgYjCU=,tag:lRLS4VlBPlEtGeugk/PF+A==,type:comment]
-    #ENC[AES256_GCM,data:5oOmojmQOrE5wQy+rjKrXYgKdR8dZjN8qA6WVMYjSM/6YQowGyqQts8UnKkX4JgVPZlBZL4W,iv:sERwVIBPSOf1fmXcT59YcOIfS1cNDq6ln2HK4oqEUA8=,tag:EGwm9d4LlwWCl9kBTYUFNQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:UbM/cHSKQw==,iv:9E4HVzugCXzG5VqS+6mEJ+RNqkpj4orvePqn5C7fWsg=,tag:iOGloEAUveHud0g1rqqEqg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:yJayszj9oO4Av05MfNNCP2Bj6xw=,iv:5CKbFMpgPRqiQ/hG6KKCcmEkQ8KzZO4zIcGciGbNeco=,tag:j6ItFwXa4xruXX97s26UhA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:H87j05TE8QMA3A8=,iv:0gz+dBjUgnye6jDEP336h054ufQ+gdDnvmyen6ztOMg=,tag:pCajByyvCj5HnPwOh7Oapw==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:NBvzfvACo3u9QpvkL/yb,iv:sm46qLRT9RhGo2h5KAZHUVKZaY+yacWuDrRBH6+IFpE=,tag:9jMouUOKr6BJqZpYWCO4sw==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:rQ6usdhqFEcQdydjlzvCtGdEUyRDXi5xnQ==,iv:HvIRCTbR4j8CA8X7Y7fdQkyNgBddoujvl4qaE1JyO1I=,tag:vKCttFJ5+EbFI5NlObKs2A==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:iOMWnEA7OaxipVPqsvCgm9pOXHjr2O1Frz9SG5y4jg==,iv:STbs1r63sYAQhr/vFkjw3BR/W4d+eFQXWJnh3Ae4qr0=,tag:N47/x9/lyRSzzM+XC+LXfQ==,type:str]
-    #ENC[AES256_GCM,data:ETDE+EMSrr4jYhpznkgvfYJF6WBQAmRaAb6EOINo7ilZ1Go2mKI=,iv:kEvebEfoD/EBRtGjlzbLRFyRUpRmTWPcbfjK3z/WHc4=,tag:ysAtJCzQofOudywo43JZoA==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:MaA4wjtSkB36niVz8LaVA5PE+vQ=,iv:yDJGFE1lzb/I5MhEzNmmj6bRwHsLqBdTFo/UsZoPwCo=,tag:XNC5WmqDyeGl5bIS1xV6qQ==,type:str]
-    #ENC[AES256_GCM,data:oa8XjHIU4cEQXrx7ZMI=,iv:V6BQXSGpFea8glJXIwxcn204d2+Bdafx98PrnNBJzWM=,tag:4qjM9ZHn47AaYPmODLhZKA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:fL4vRYFTTmx56eOsgQ==,iv:zETPZ9aJmh9EXzF6o+5b3ngUlBrv7W2a1jNNOcXdPqY=,tag:2Mpx0M6dEMcqlMDGuftb6g==,type:str]
-    SVCNET: ENC[AES256_GCM,data:jZ4NqlP32j+vI/tzzA==,iv:DW71Mc1ifCXMHmVXPS9zad/6XKLzeyjWDQSQWHwnlGk=,tag:8Kl94VLXsAsH2z583uWYGA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:yWyHRw==,iv:UK56FPDbXgWNXaQYB0Li/1q/RbLBORk7AKei6ruq3tA=,tag:e0CyUr8nTdGqB8wO6KKteg==,type:str]
+    #ENC[AES256_GCM,data:2IA1kSQWtluVA+KwhtrwiFzns/Zf4MAum3Q3sr+lybEUcHkObntsDvLJA+givshKi/bA36Z9n3dSeqn80RD/hlM=,iv:LCFRLi1nMEMhXdTpENqzjbDhKFNAislCJiE9wxV39Ek=,tag:adFbVzyWqSCJHPKV8FoRLA==,type:comment]
+    #ENC[AES256_GCM,data:cA2if9lc1LdNWUL27kDJCOrAtsrepwxgkacMAaXfViqEJKq/zL1niBoeOyc=,iv:jSJGRA6OvvEedOMzYk4rvCP5PdIulOnFKZJcQYvfZw0=,tag:U879nQw5ZRm73XG92a1Z+g==,type:comment]
+    VIP: ENC[AES256_GCM,data:jjXzbpSoi9yzicpbJg==,iv:DCaSwwlw9C6OEn+qeTGLjvQf/zRXtl9+Imij4zLOGKU=,tag:i/A5hbXJL9JjiNtE9EonFA==,type:str]
+    #ENC[AES256_GCM,data:htEdNs7k28witxfZkvlKSFj/N++GtoZRT5VX,iv:EQ+XP1al4s6HfqGrAwO0BaRQEzbyOimNcQVnnTzgjes=,tag:Xu4ZeRVWZW4j0P/MN/KtuA==,type:comment]
+    #ENC[AES256_GCM,data:nr7Zh2fdPNZpUdFtVRDRhVYoPLbJAZxa9VgFvU01SKg27+nMJz3842x5Lrs+8eRT3M+1hzWY8mJh15DxvJtIg5LGmM+bS+UtkiiHhgFApkigKwAtkTzyFKY=,iv:Wo8abgAgszgMqvxdNQV+Drx20F76yiIQHb2+maIKErs=,tag:xc6E7zVLckICAWv+Hfh5kg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:svJtXow3gfrVXtWOE0U=,iv:phdT40HOhhZ7ld1qhTmIA1SYAXJOGIkINT8HOCkvYuw=,tag:htSxI33KfSGgyesx56VzTA==,type:str]
+    #ENC[AES256_GCM,data:MEp2n7DGEVzQkSqK1U1Y3NIyu2UR/Z8J2xPzLnam/Ct8hA==,iv:qiZtqbzGQHQ5vHJ4Gj7LXoTythihFMnv0J8FPf+8im8=,tag:dZ+60EWD0pIyv83HlhrcPg==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:pXtRL0RS6bvlQZb91g==,iv:g5MDJAgaWAgl2TGf0yw5OH1aTYdDxZTgVNqI0tmLux8=,tag:pwzfzf2SMIRmFA7QSIrnZw==,type:str]
+    #ENC[AES256_GCM,data:iMUjiHOWVheAMdiuSLX4w4FaoCm3+d3M/tb3jO8RFRchwmCoM6SxRZRtnzQpK4I=,iv:fT5xJuqc55HQiPaLsDqAtW/4Efdd3S5amzH60I2Ai1k=,tag:a0+NoMZTLU4GEY/J2jp++A==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:3QOLI9/1609bgaiYEVemFHUL5oe/Lm85Woxvt7q4Sw==,iv:uyB/xK5ZRew69MIm2zjQdqvCVuJXMaFnhPNdx/9+hd8=,tag:zb6mJ6P1RTJ8w4EV5HC+jQ==,type:str]
+    #ENC[AES256_GCM,data:FFjhp1pMVWbI45ZOVJjqhikYzSQFqZLARtm3OCdA0vWNsf+zVCVek5VLGu9I0M+qOp/taUJ+EqMJ76Q6lZyp1VT5oZOQt5c6CkZaqrkhLNhM9A==,iv:XBa+fuXbmAUiDZ6Iat48EVrWmMI3+5MZUiOA8Qo5YI4=,tag:qXtvgV2nQrmhsKRZUK5zxg==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:oBRhO74zpcxkc5gZ0eHa,iv:TvT6hg3e6D6NhNsI2AScAqoCuwRQrOKaApedOesV9os=,tag:KlnXM5Qa7bL+/GVR1Dnz+w==,type:str]
+    #ENC[AES256_GCM,data:tJtmmlvqnePVzE4bVzjIzA/cFLIjhFtPe9Y9O3f1KvpI,iv:F/ixgGaE/cLR1DYBaTeJi/3UDtEO9cRzTzrJQqAB7Pw=,tag:27foB6kOAQGKwNIz0QUlvQ==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:c2r7bNbms07qpvVwgWX1,iv:Oq95Hr5+sbhac+ZfjUm1SO7clHoIIwv3Lmo0Lx6/n14=,tag:H9Enn7yLEJkyumh1ix0dWA==,type:str]
+    #ENC[AES256_GCM,data:87x9uW652SFVxqzMdPD9K/58n/RCzdxSGj02i5Ykh8qZOnDGXHXgMwlJMlbk4qVrMqqsbifNWa8GTSumhCMcIvOLgsLLt+m3nI/tHtng6b4=,iv:v9iOFNTZ5zz3keW3SXlcEbfmN857R9+9zoo44ARIkNI=,tag:jdm9/gpmXshufYXx/sfD4Q==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:y5fl2iH+BTgK8ooU2Gpv,iv:Nev6LIAeFM/HCkOG0cOdPnlFOZfbSkm8w+/dKaLNFrM=,tag:tH7SGev7rFGKgJdoI6prtg==,type:str]
+    #ENC[AES256_GCM,data:UtPodcAuOF4yP/CqNHu4TA5cGqiMlLimo7LvX6MeH7iyjqAtxcv2f60aTK85ojMiiwkCz2ymkk103BTBbJPMTfAMAoTI7e99LP7PnCujxoklhOMWlNEJ,iv:TYJTKylepv7uSJBX0tCt85tljFFQaAHsCQ2ZbXqHUVE=,tag:dx3+Y7o9u1dvzneu0lml3g==,type:comment]
+    #ENC[AES256_GCM,data:myzpljPx7nK7xz7MkwcAE2rx2ChaGpehcz6X9xCrKNf5XSE3fdyAJx6kznbA1/ZhTvWpNPcBgBFzDe2pWC/Cc4JVguiScB/+Ss6y74nTTqD1Apa4WquKpecCV55qDym4rA2nIgmtoq3jWYS1iBjrnXJEskkgQVWVrQFTNA==,iv:h1F5ep+tkbyj3fCvlhUppED2VWHvciNYRj/Q5Fcl3wM=,tag:Pqfuc7CVD4vTsqLmVpcxgg==,type:comment]
+    #ENC[AES256_GCM,data:EbXM+ziKg77bYjSmpWpITcrFjcGWioyxrq6rIWJFJx6Zv2qa6lX3w5Ai3DieaXL2dwDe+HkLwAlDfQe87f564p8dWtdxAMYnPzZOGs5Ds94=,iv:qaWyQ5Ae5DYH2ydRnQuvYfR6+SU+3HHiMBMOnm+KG9c=,tag:8MHAF4JUMG/J5cHud1FouQ==,type:comment]
+    #ENC[AES256_GCM,data:aUmMkyyK4XiKl/aY5RoMb3LT4eecede9psYwn8ZgEcZ2zYgG/3ZFITP24K85aihbPeTiKoKY,iv:j93P0IaDgkp0894yxeX625LtYSwbhl5iV9/XqkW7gRw=,tag:rU1TiZJmB6M3BObFPpDZAA==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:q31KU6q2OtVKZpVK,iv:VoTh3BLKhvCj2VBpnCdJuIdS83znuixVZY+QfN6wsnA=,tag:/ihdsP1aD9h9tebIQuprGg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:WbzXt0Yrlqb17KEN+Vj2948=,iv:147ryXdmJ7GbPk0cpxvNhG8w8aR1dNA1fbknxVB6nvs=,tag:z7vHyEVey5rhuZ/CyL7cjQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:Unzm9njeW1y44VeGv0/GUx0Bm74ID/dZlwp5XMI0Agg=,iv:HwWT62LPAuYeVmFGTh8GyVWp+6GA/ygPgUjs8KStX+8=,tag:Zw0ExF8KprKSS8jQX6Xmdw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:HLCLdziJrDr8X34vzUmRCMUXWfWV8KbDv7AaCw4AwwFAN9+18sr8Sg==,iv:FArug8B1Owpaq2+x36ZYOExBLT+N1F6bZ8kKYGaRMDA=,tag:yiHkR9H1eNNTVm4HPoKSFA==,type:str]
+    #ENC[AES256_GCM,data:fblar7hjY0smZgKlTuJ4TxzOEoy/xQUNkdHLEU7DWZm5gZ4cyarCQE5tyRH7HClM3QsFr50LtgiRqxd7Wi6dQA==,iv:WJ/8A3yEKnH0qZWHPj7cHlTLkfVhth35YVZ/klYBFDY=,tag:MOKr/62a9QVmVbDMq8UhAg==,type:comment]
+    #ENC[AES256_GCM,data:SqSHZTPmucCnclRILpUtZmE3zVT0Ho1nMK9xn+eHGcqvcJ83fFyrzIJEFlTuLgBZdnxrrLn90lM=,iv:WFjuUZ/3Fmf1EaY+Tb3zxv4yY/JWvfq2AqOFQUw/UPc=,tag:QpYo9mQEf3afbSHPyEaFZA==,type:comment]
+    #ENC[AES256_GCM,data:hp+f6WzKY4O4jvYJucXJkyWe4euThPHEyw==,iv:Ij5skonZO5+3vojpyLtxtgQHz7aDWm37JBbCi8UkSDU=,tag:rmA0dyereaayBus5wQIn4Q==,type:comment]
+    #ENC[AES256_GCM,data:7XnsM3oJqhGb0NVo65C3rsgLXLrmlu3khrKukPRv5JsOMYU2R1HQk8UhLcW4CySVUl6ZxcqOHq0nDFVDGNo2HlcGTMAV8RQx8/QQ7b8=,iv:8gSBmdGO6HuDpv31dJujyYvo+rfaRZU1AHP5cjfdSrI=,tag:iE6vHlfdgXwP1LMQaxpv+w==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:c8n+iM1YctlBGFaVf3bgOi8zb/0FXFMLoOttd7F7L16gv1GE93+LsNiyN4mWblZF,iv:Uy77+CFlRB1hdZfRdW8NCILuUc7JKYUngLYy5OUwPsE=,tag:8zT93WAIVXABeVgxb6o++Q==,type:str]
+    #ENC[AES256_GCM,data:0JJmVs9qG75iv7g6Weak0vJ2SA2cBqjO+3QIpeX7/5MMX+mR0ZiVQhLPYuDwDa/Y7CGs9rvWMzY0V+wyxcbjCnDD/QZEIGk=,iv:DIsQIG8ZuGhqcX5ebL3nITmt+USCtsiKoAWxVDDf0ww=,tag:cBFYdC+c/BYPRFIxTwWgfA==,type:comment]
+    #ENC[AES256_GCM,data:Ve5ZQ7C1oMIl644zZi5JqGbsR8WNBbEVUFYOJCObzbAMAHHFHsz3CJvvMaFSuAxuRp6DhtId,iv:5YxM/j+4ICnBZ3mVNlrkP1PNoNUlj74zTx3a1ccUsqo=,tag:+ZrffEy1z2YB6GgL5A7a5g==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:hdgRt80mpw==,iv:ym6TWm1jVWDJ05rmKP8KVKUDcdsz/RBPJOpCT+JvfmQ=,tag:gOL6eeMiQxpnA32MWvnQwQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:8HQTSBTybfmv33hP2rRuFEq3mtg=,iv:b/TFxbpOX2FDUF3GYP7lxYwuvMQif6MNz2ynuEVfTBg=,tag:afYE9OZJeQ5kv/uBMqyFIA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:XjtWK/t1MgTNlB0=,iv:V7P/saC9gxPGNf70X9nGjmiTa5r+pZguxriexmGeLfc=,tag:PpbFATRTsG+OfVsz7vRAQg==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:B2SBpgczYnsa4Ec0BjH5,iv:mALDNVw2fUMGsGHY3oD9gSomYz5c5oCoQTO+wt/1yzo=,tag:2TbzhxNVrYs7xnz9h7qZuA==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:6WACMbmmLKG9yTfLxF9FENOcJViD5N1XRg==,iv:4l9OZBVgq78aTiABih61Myd8IlPDZFUDmS2+gD/PANs=,tag:OIUQLHMb0UX4x2Mey4/V7A==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:rGdtm0cKqvKTUpW6u8drDhiAjq3aG1qeFI23mVMjVg==,iv:pzZYzmj3RMdA7x8aZ3QihNjOImXh5uTE5yENYi0/E+k=,tag:+B0vsCCbQjbPABRlXwGyLw==,type:str]
+    #ENC[AES256_GCM,data:VuhcjQl3jPGGHvddRps4pOquTwKdi0XP9o5kvdCOCI0U+XTIMSw=,iv:wiCkEmtSHvjflRYUUry95lJpNg+KzkicULm5JEoEfSg=,tag:4/Ta7OUyDuLPmaWLGAaGWg==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:mQCXhMvR5T6Q6JmSZKiNc9FH8LY=,iv:+CbaTjBxctSGX/gJ/Hm9swv2fo98SkcX7X7z9keg6KM=,tag:tSG7gNraiz9+WCq55Qguog==,type:str]
+    #ENC[AES256_GCM,data:A0PUvQja3g9jI9N75jE=,iv:Lk45Ve08qLtq6gzrhq+5PpVR/nyhoo7S4x9eqc/9Ntg=,tag:xSrRTOIJ+KdkKzEJdbaDSw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:MfgSbbPKx/TwMu3aZw==,iv:p+YvtBMc+0z/y7x/MzTbx6aFWQgJ3HVcMDweJc5h23o=,tag:VSLstk0vvvSwNg0PJfn75w==,type:str]
+    SVCNET: ENC[AES256_GCM,data:UbHIl+SsDyrBGqkP6w==,iv:aAz9E4iQIzSKGSwBjoChu6c/oXxo2/b6F2+tlN+5j1M=,tag:46wqBVkvzhgeML1o7gYg6g==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:d+vjlA==,iv:Jvb247+2Lrlu03jnjmGa3bbyON3IiyF0hjvAbjwxOpI=,tag:W1s+k9sik1+DaEs8xCCvOA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqWjE0a3FsS3lCN2xReVVZ
-            UklUcXlXVUdQNmpMUUNZT2JmeHJwa1lxc3drClhDN1VjSk9DcG0zNDE0MDBTRzhs
-            WVp6WWs3ZitlNEtwaXYxcUZnR0R4NlUKLS0tIHI2WnVPZTJKOVg2YW1uajA5RVpP
-            OU0rTTR2OXp4b1o0cy9XdmtCdzFReDgK1vPea2WIlzK6DrzscS/4vYm8LWGdIQYk
-            7+bTRSxHKiqNKab7LcIaCw+LyoaDUpkvfgyGR+TYFTj7W58yJEAqOQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArekE1cUUzS3lVbXI1cCt2
+            T1Evb3RTRk5wei9FYyt3a0xUZUpOOUJWTTFRCkpNbUpCMGlMZzBUb0x6L0IycWdh
+            N3hFc3pYNytsV2xtNXNvQk12aFo5QjQKLS0tIE9jU2VnYTVhRTVUeGMvVExpVWUv
+            NU8xc0FoWUJpYWxzeC9RSTFGWHRuRzAKOsl70C1qGeS8aReZDTXUDyewZcysByza
+            n1lQlEGCQGq8CWAKXxU19IRmEiaf6DG0cuVdPzsT61OXLm8o+KnxFA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-12T18:33:24Z"
-    mac: ENC[AES256_GCM,data:qRpzUycYpwHU7BlaUjeuqkRVqF/T0iS0qCqk8LyUpnBN3QKiyXtreaIfajHTiyD54vBk5egbG+Z63iNOcMNEfAELQSMWLKIVy4QF2F4Z3ev4+itLxMYG9SrNpvA+mKGO5Iokg+FGUKxYi0uSB8Yyl2WYn4O9rXdGRzaOmBANd+s=,iv:FzjyQz+2d4v6SuzrUC9WexbUgqzkfW5CA1XdPEQuTis=,tag:leOvzA3BGuy52b2/iehksA==,type:str]
+    lastmodified: "2025-01-12T20:40:57Z"
+    mac: ENC[AES256_GCM,data:pJXSACMMmmiyYz75dEpkbCleIaQts4mDK/wROfBenKIyasxFqyIUF1N9tO3AIB8zcgO05cSaamqQlX+wyIAGRI++RS5ylmGrfHvjaqdxdPteapE4mZEgzve6nUHCzUjY24rLeBmY+4skim675rrXT9xQdwGMKmim14qL0AK270s=,iv:IeUaU6H5hDWZEWrDh3lkSsgB5IoTYLhqrruTwfH/7sw=,tag:46JyirIMhJbUCoFe3qGpMQ==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
